<resources>
    <string name="app_name">PCB</string>
    <string name="first_information_page">First Information Page</string>
    <string name="build_a_pc_of_nyour_own">Build a PC of\nyour own</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="information1">Pick Components\nfrom Each\nCategory</string>
    <string name="information2">Pick Components\nfrom prebuilt PC\nand see them at the\nmarketplace</string>
    <string name="password">Password</string>
    <string name="email_address">Email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account_here">Create an account here</string>
    <string name="create_username_here">Create username here</string>
    <string name="skip_for_now">Skip for Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="ini_main_menu">Ini Main Menu</string>

    <!--to toggle the open close button
        of the navigation drawer-->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="account">Account</string>
    <string name="saved_design">Saved Design</string>
    <string name="test">test</string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="coding_in_flow">Coding in Flow</string>
    <string name="categories">Categories</string>
    <string name="case_icon">CASE</string>
    <string name="mobo_icon">MOTHERBOARD</string>
    <string name="procie_icon">PROCESSOR</string>
    <string name="ram">RAM</string>
    <string name="storage">Storage</string>
    <string name="storage_icon">STORAGE</string>
    <string name="gpu">GPU</string>
    <string name="fan">FAN</string>
    <string name="psu">PSU</string>
    <string name="pick_your_component">Pick Your Component</string>
    <string name="cpu">CPU</string>
    <string name="motherboard">Motherboard</string>
    <string name="Case">Case</string>
    <string name="Fan">Fan</string>
    <string name="pc_recommendation">PC Recommendation</string>
    <string name="details">Details</string>
    <string name="cpu_name">CPU name</string>
    <string name="gpu_name">GPU name</string>
    <string name="motherboard_name">Motherboard name</string>
    <string name="ram_name">RAM name</string>
    <string name="psu_name">PSU name</string>
    <string name="case_name">Case name</string>
    <string name="fan_name">Fan name</string>
    <string name="storage_name">Storage name</string>
    <string-array name="spinnersample">
        <item>Pick Your Component</item>
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cores">Cores</string>
    <string name="ghz">GHz</string>
    <string name="rp_000">Rp. 000</string>
    <string name="gpu_chip">GPU chip</string>
    <string name="memory">Memory</string>
    <string name="mhz">MHz</string>
    <string name="chipset">Chipset</string>
    <string name="form_factor">Form Factor</string>
    <string name="mobo_name">Mobo Name</string>
    <string name="speed">Speed</string>
    <string name="modules">Modules</string>
    <string name="size">Size</string>
    <string name="tipe">Tipe</string>
    <string name="watt">Watt</string>
    <string name="fan_rpm">Fan RPM</string>
    <string name="your_account">Your Account</string>
    <string name="edit_your_account_here">Edit your account here</string>
    <string name="username">Username</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="privacy_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="policy_data">Price</string>
    <string name="policydata">At PCB Application, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by PCB and how we use it. If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us. This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in PCB. This policy is not applicable to any information collected offline or via channels other than this website. Our Privacy Policy was created with the help of the Free Privacy Policy Generator. Consent By using our website, you hereby consent to our Privacy Policy and agree to its terms. Information we collect The personal information that you are asked to provide, and the reasons why you are asked to provide it, will be made clear to you at the point we ask you to provide your personal information. If you contact us directly, we may receive additional information about you such as your name, email address, phone number, the contents of the message and/or attachments you may send us, and any other information you may choose to provide. When you register for an Account, we may ask for your contact information, including items such as name, company name, address, email address, and telephone number. How we use your information We use the information we collect in various ways, including to: Provide, operate, and maintain our website Improve, personalize, and expand our website Understand and analyze how you use our website Develop new products, services, features, and functionality Communicate with you, either directly or through one of our partners, including for customer service, to provide you with updates and other information relating to the website, and for marketing and promotional purposes Send you emails Find and prevent fraud Log Files PCB follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services\' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users\' movement on the website, and gathering demographic information. Cookies and Web Beacons Like any other website, PCB uses \'cookies\'. These cookies are used to store information including visitors\' preferences, and the pages on the website that the visitor accessed or visited. The information is used to optimize the users\' experience by customizing our web page content based on visitors\' browser type and/or other information. For more general information on cookies, please read the Cookies article on Generate Privacy Policy website. Advertising Partners Privacy Policies You may consult this list to find the Privacy Policy for each of the advertising partners of PCB. Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on PCB, which are sent directly to users\' browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit. Note that PCB has no access to or control over these cookies that are used by third-party advertisers. Third Party Privacy Policies PCB\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options. You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers\' respective websites. CCPA Privacy Rights (Do Not Sell My Personal Information) Under the CCPA, among other rights, California consumers have the right to: Request that a business that collects a consumer\'s personal data disclose the categories and specific pieces of personal data that a business has collected about consumers. Request that a business delete any personal data about the consumer that a business has collected. Request that a business that sells a consumer\'s personal data, not sell the consumer\'s personal data. If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us. GDPR Data Protection Rights We would like to make sure you are fully aware of all of your data protection rights. Every user is entitled to the following: The right to access – You have the right to request copies of your personal data. We may charge you a small fee for this service. The right to rectification – You have the right to request that we correct any information you believe is inaccurate. You also have the right to request that we complete the information you believe is incomplete. The right to erasure – You have the right to request that we erase your personal data, under certain conditions. The right to restrict processing – You have the right to request that we restrict the processing of your personal data, under certain conditions. The right to object to processing – You have the right to object to our processing of your personal data, under certain conditions. The right to data portability – You have the right to request that we transfer the data that we have collected to another organization, or directly to you, under certain conditions. If you make a request, we have one month to respond to you. If you would like to exercise any of these rights, please contact us. Children\'s Information Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity. PCB does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</string>
    <string name="i_read_and_accepted_the_privacy_policy">I read and accepted the privacy policy</string>
</resources>