<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recommendation_cardview"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="11dp"
    card_view:cardElevation="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="3dp"
        android:background="@drawable/shape">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <FrameLayout
        android:id="@+id/picture_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_pc_recommendation"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

    </FrameLayout>

        <TextView
            android:id="@+id/recommendation_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture_layout"
            android:layout_gravity="end|bottom"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/pc_recommendation"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture_layout"
            android:layout_toStartOf="@+id/expand_button"
            android:padding="8dp"
            android:text="@string/details"
            android:textSize="16sp" />

        <ImageButton
            android:id="@+id/expand_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/picture_layout"
            android:layout_alignParentEnd="true"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:tint="#000000" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/expand_specification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/cpu"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/cpu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cpu_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/gpu"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/gpu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gpu_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/motherboard"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/mobo_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/motherboard_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/ram"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/ram_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ram_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/storage"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/storage_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/storage_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/psu"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/psu_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/psu_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Case"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/case_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/case_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Fan"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/fan_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="center"
            android:text="@string/fan_name"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/price"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/finalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/fan_name"
            android:textSize="16sp" />



    </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>
